manifests/cobra-mai-job.yaml
---
# #############################################################################
# Autor: Alex (@rootzilopochtli)
# Laboratorio: Cobra Mai - Sesión de Entrenamiento (Future-Gen Edge)
# Versión: 2.0 (RHEL 10 Edition)
# Descripción: Procesa datos en RHEL 10 sobre un host RHEL 9.7 estable.
# #############################################################################

apiVersion: v1
kind: Namespace
metadata:
  name: cobra-mai-lab
